unpackaged/main/default/objects/Lodge__c/Lodge__c.object-meta.xml
<CustomObject>
    <description>Accommodations available to relate to Opportunities for Workforce Accommodation Solutions</description>
    <label>Lodge</label>
    <nameField>
        <label>Lodge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lodges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>