unpackaged/main/default/objects/Lodge__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>Number of beds available at this lodge</description>
    <inlineHelpText>Number of beds available at this lodge</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>