unpackaged/main/default/objects/Lodge__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Latitude/Longitude information about where this accommodation is located</description>
    <inlineHelpText>Latitude/Longitude information about where this accommodation is located</inlineHelpText>
    <label>Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>