unpackaged/main/default/objects/Lodge__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account that owns this accommodation</description>
    <inlineHelpText>The account that owns this accommodation</inlineHelpText>
    <label>Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lodges</relationshipLabel>
    <relationshipName>Lodges</relationshipName>
    <type>Lookup</type>
</CustomField>