unpackaged/main/default/objects/Lodge__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who is primarily responsible for this accommodation</description>
    <inlineHelpText>The person who is primarily responsible for this accommodation</inlineHelpText>
    <label>Primary Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Owner__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Contact_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Lodges</relationshipLabel>
    <relationshipName>Lodges</relationshipName>
    <type>Lookup</type>
</CustomField>