unpackaged/main/default/objects/Lodge__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lodge</fullName>
                <default>true</default>
                <label>Lodge</label>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>