unpackaged/main/default/objects/Lodge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Capacity__c</columns>
    <columns>Description__c</columns>
    <columns>Owner__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>