unpackaged/main/default/objects/Lodge__c/listViews/All_hotels.listView-meta.xml
<ListView>
    <fullName>All_hotels</fullName>
    <columns>NAME</columns>
    <columns>Capacity__c</columns>
    <columns>Description__c</columns>
    <columns>Owner__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Hotel</value>
    </filters>
    <label>All Hotels</label>
</ListView>